--- a/bot/flask_admin/templates/my_base.html
+++ b/bot/flask_admin/templates/my_base.html
@@ -16,10 +16,7 @@
       }
       .form-horizontal .col-sm-2,
       .form-horizontal .col-sm-3,
-      .form-horizontal .col-sm-4 {
-        flex: 0 0 100%;
-        max-width: 100%;
-      }
+      .form-horizontal .col-sm-4,
       .form-horizontal .col-sm-8,
       .form-horizontal .col-sm-9,
       .form-horizontal .col-sm-10 {
