--- a/bot/flask_admin/templates/mybase.html
+++ b/bot/flask_admin/templates/mybase.html
@@ -1,9 +1,13 @@
 {% extends 'appbuilder/baselayout.html' %}
 
+{% block head %}
+{{ super() }}
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+{% endblock %}
+
 {% block head_css %}
 {{ super() }}
 <link rel="stylesheet" href="{{url_for('static',filename='css/mobile_responsive.css')}}">
-</link>
 {% endblock %}
 
 {% block head_js %}
