--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -2786,6 +2786,7 @@
             if (hideInfoCheckbox) hideInfoCheckbox.style.display = 'none';
             if (screenSaveBtn) screenSaveBtn.style.display = 'none';
             if (screenUploadBtn) screenUploadBtn.style.display = 'none';
+            if (supportContainer) supportContainer.style.display = 'none';
             // Keep crawfordLabel visible for screenshots
             if (hideInfoCheckbox && hideInfoCheckbox.checked) {
                 if (playersInfo) {
