--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -638,6 +638,7 @@
 
         .modal-footer button {
             padding: 8px 16px;
+            white-space: nowrap;
         }
 
         .cancel-btn {
