--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -639,6 +639,7 @@
         .modal-footer button {
             padding: 8px 16px;
             white-space: nowrap;
+            min-width: 80px;
         }
 
         .cancel-btn {
